# boardfarm-docsis

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  README.md  groups  noxfile.py  project.config  pyproject.toml  requirements.txt  setup.py  tox.ini
boardfarm3_docsis/: __init__.py  configs.py  exceptions.py
boardfarm3_docsis/configs/: __init__.py
boardfarm3_docsis/configs/mibs/: CL-PKTC-EUE-RST-MIB.txt  CL-PKTC-EUE-TC-MIB.txt  CL-PKTC-EUE-USER-MIB.txt  CLAB-ANI-NID-MIB.mib  CLAB-GRE-MIB.mib  CLAB-GW-MIB-2016-08-04.mib  CLAB-TOPO-MIB.mib  CLAB-WIFI-MIB.mib  DOCS-BPI-MIB.mib  DOCS-CABLE-DEVICE-MIB.mib  DOCS-CABLE-DEVICE-TRAP-MIB.mib  DOCS-IETF-BPI2-MIB.mib  DOCS-IF-MIB.mib  DOCS-IF31-MIB.mib  DOCS-RPHY-CTRL-MIB.mib  DOCS-RPHY-SEC-MIB.mib  DOCS-RPHY-STATS-MIB.mib  DSG-IF-MIB.mib  ECL-SP-MIB-EXSIG-D04-090624.mib  PKTC-EVENT-MIB.mib  pktcSig-eu.mib
boardfarm3_docsis/devices/: isc_provisioner.py  minicmts.py
boardfarm3_docsis/docs/: README.md
boardfarm3_docsis/docs/source/: conf.py  connectivity.rst  docsis.rst  erouter.rst  index.rst  net_tools.rst  snmp.rst  tr069.rst
boardfarm3_docsis/lib/: __init__.py  docsis_encoder.py  sw_update_helper.py
boardfarm3_docsis/plugins/: __init__.py  docsis.py
boardfarm3_docsis/templates/: __init__.py  cmts.py  provisioner.py
boardfarm3_docsis/templates/cable_modem/: __init__.py  cable_modem.py  cable_modem_hw.py  cable_modem_mibs.py  cable_modem_sw.py
boardfarm3_docsis/templates/ntu/: __init__.py  docsis_ntu.py
boardfarm3_docsis/use_cases/: __init__.py  connectivity.py  docsis.py  erouter.py  net_tools.py  networking.py  snmp.py  software_update.py  tr069.py
boardfarm_docsis/: __init__.py  exceptions.py  testsuites.cfg
boardfarm_docsis/devices/: __init__.py  arris_cmts.py  base_cmts.py  cBR8_cmts.py  casa_cmts.py  docsis.py  isc_provisioner.py  minicmts.py  topvision_cmts.py
boardfarm_docsis/devices/base_devices/: __init__.py  board.py  cmts_template.py  docsis_cable_modem.py  mta_template.py
boardfarm_docsis/lib/: booting.py  booting_utils.py  cfg_helper.py  dns_helper.py  docsis.py  docsis_encoder.py  env_helper.py  mta_conf_Proc.tcl  voice.py
boardfarm_docsis/lib/hooks/: __init__.py  contingency_checks.py
boardfarm_docsis/lib/specs/: __init__.py
boardfarm_docsis/mibs/: CLAB-ANI-DEV-MIB.mib  CLAB-ANI-NID-MIB.mib  CLAB-DEF-MIB-2017-04-13.mib  CLAB-DNS-MIB.mib  CLAB-GRE-MIB.mib  CLAB-TOPO-MIB.mib  CLAB-UPS-MIB.mib  CLAB-WIFI-MIB.mib  DIFFSERV-DSCP-TC.mib  DOCS-BPI2EXT-MIB-2017-04-13.mib  DOCS-DRF-MIB.mib  DOCS-IETF-BPI2-MIB.mib  DOCS-IF-EXT-MIB.mib  DOCS-IF3-MIB-2019-05-16.txt  DOCS-IF31-MIB-2018-11-15.mib  DOCS-IFEXT2-MIB-2011-06-23.mib  DOCS-LOADBAL3-MIB.mib  DOCS-PNM-MIB.mib  DOCS-QOS-MIB.mib  DOCS-QOS3-MIB-2019-02-07.mib  DOCS-QOS3-MIB.mib  DOCS-RPHY-CTRL-MIB.mib  DOCS-RPHY-MIB.mib  DOCS-RPHY-SEC-MIB.mib  DOCS-SUBMGT3-MIB-2015-06-03.mib  DOCS-SUBMGT3-MIB.mib  ECL-SP-MIB-DEF-D01-060105.mib  ECL-SP-MIB-EXSIG-D04-090624.mib  ESAFE-MIB.mib  EXCENTIS-MIB.mib  IANAifType-MIB.mib  PKTC-EXCENTIS-MTA-MIB-draft06.mib  PKTC-EXCENTIS-SIG-MIB-draft09.mib
boardfarm_docsis/plugins/: docsis.py
boardfarm_docsis/templates/: cable_modem.py  cmts.py  provisioner.py
boardfarm_docsis/tests/: acs_dos_attack.py  docsis_boot.py  docsis_unittest.py  reset_to_defaults.py  reset_tr069_to_defaults.py
boardfarm_docsis/use_cases/: acs.py  boot_file_helper.py  cmts.py  cmts_interactions.py  descriptors.py  erouter.py  online_usecases.py  provision_helper.py  ripv2.py  sku_handler.py  software_update.py
devices/: arris_cmts.py  base_cmts.py  casa_cmts.py  docsis.py
integrationtests/boardfarm_docsis/devices/: test_arris_cmts.py  test_casa_cmts.py  test_topvision_cmts.py
integrationtests/boardfarm_docsis/devices/base_devices/: test_cmts_template.py
integrationtests/boardfarm_docsis/lib/: test_env_helper.py
json_payload/: mta_config.json
mibs/: CLAB-WIFI-MIB.mib  DIFFSERV-DSCP-TC.mib  DOCS-CABLE-DEVICE-MIB.mib  DOCS-IF-MIB.mib  DOCS-IF3-MIB-2019-05-16.txt  DOCS-IF31-MIB-2019-05-16.txt  DOCS-IF31-MIB.mib  DOCS-LOADBAL3-MIB.mib  DOCS-PNM-MIB.mib  DOCS-RPHY-CTRL-MIB.mib  DOCS-RPHY-MIB.mib  DOCS-RPHY-PTP-MIB.mib  DOCS-RPHY-SEC-MIB.mib  DOCS-RPHY-STATS-MIB.mib  ESAFE-MIB.mib  IANAifType-MIB.mib  PKTC-EXCENTIS-MTA-MIB-draft06.mib
resources/mibs/: CL-PKTC-EUE-DEV-MIB.txt  CL-PKTC-EUE-EDVA-MIB.txt  DOCS-DIAG-MIB.mib  DOCS-IF31-MIB-2018-11-15.mib  DOCS-IFEXT2-MIB-2011-06-23.mib  DOCS-MCAST-AUTH-MIB.mib  DOCS-QOS3-MIB-2019-02-07.mib  DOCS-RPHY-MIB.mib  DOCS-RPHY-PTP-MIB.mib  DOCS-SUBMGT-MIB.mib  ECL-SP-MIB-DEF-D01-060105.mib  ECL-SP-MIB-EXMTA-D01-051130.mib  EXCENTIS-MIB.mib  PKTC-DECT-MIB.txt
tests/: __init__.py  docsis_unittest.py  docsisunittest.py  pytest.ini
tests/docsis/: __init__.py  test_demo_docsis_1.py
tests/docsis_lib/: cfg_helper.py  docsis.py
tests/tr069/: __init__.py  test_demo_tr069_1.py
unittests/boardfarm/: __init__.py  exceptions.py  library.py  orchestration.py
unittests/boardfarm/devices/: __init__.py  base.py  debian_lan.py  openwrt_router.py
unittests/boardfarm/devices/base_devices/: board.py  board_templates.py
unittests/boardfarm/lib/: DeviceManager.py  SNMPv2.py  booting.py  common.py  env_helper.py  network_helper.py  voice.py
unittests/boardfarm/use_cases/: voice.py
unittests/boardfarm_docsis/devices/: test_casa_cmts.py
unittests/boardfarm_docsis/lib/: test_booting.py
