[build-system]
    build-backend = "flit_core.buildapi"
    requires      = ["flit_core >=3.2,<4"]

[project]
    authors = [
        { name = "Various", email = "t&iconnectivityboardfarm@libertyglobal.com" },
    ]
    classifiers = [
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "Intended Audience :: Telecommunications Industry",
        "License :: OSI Approved :: BSD License",
        "Programming Language :: Python :: 3",
        "Topic :: Software Development :: Embedded Systems",
        "Topic :: Software Development :: Quality Assurance",
        "Topic :: Software Development :: Testing",
        "Topic :: Software Development :: Testing :: Acceptance",
    ]
    dynamic = ['version', 'description']
    name = "boardfarm_docsis"
    readme = "README.md"
    requires-python = ">=3.6"

    dependencies = [
        "packaging",
        "tabulate",
    ]

    [project.optional-dependencies]
        dev = [
            "black",
            "flake8",
            "flake8-bugbear",
            "flake8-docstrings",
            "flake8-rst",
            "flake8-rst-docstrings",
            "mypy",
            "pre-commit",
            "pylint",
        ]
        doc = ["sphinx"]
        test = [
            "pytest",
            "pytest-cov",
            "pytest-html",
            "pytest-mock",
            "pytest-randomly",
            "pytest-xdist",
        ]

    [project.urls]
        Source = "https://github.com/lgirdk/boardfarm-docsis"
