[build-system]
    build-backend = "flit_core.buildapi"
    requires      = ["flit_core >=3.2,<4"]

[project]
    authors = [
        { name = "Various", email = "t&iconnectivityboardfarm@libertyglobal.com" },
    ]
    classifiers = [
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "Intended Audience :: Telecommunications Industry",
        "License :: OSI Approved :: BSD License",
        "Programming Language :: Python :: 3",
        "Topic :: Software Development :: Embedded Systems",
        "Topic :: Software Development :: Quality Assurance",
        "Topic :: Software Development :: Testing",
        "Topic :: Software Development :: Testing :: Acceptance",
    ]
    dynamic = ['version', 'description']
    name = "boardfarm3_docsis"
    readme = "README.md"
    requires-python = ">=3.6"

    dependencies = [
        "boardfarm3",
        "pandas",
        "pexpect",
    ]

    [project.optional-dependencies]
        dev = [
            "black",
            "flake8",
            "flake8-bugbear",
            "flake8-docstrings",
            "flake8-rst",
            "flake8-rst-docstrings",
            "mypy",
            "pre-commit",
            "pylint",
        ]
        doc = ["sphinx"]
        test = [
            "pytest",
            "pytest-cov",
            "pytest-mock",
            "pytest-randomly",
        ]

    [project.urls]
        Source = "https://github.com/lgirdk/boardfarm-docsis"

    [project.entry-points."boardfarm"]
        docsis = "boardfarm3_docsis.plugins.docsis"


[tool.commitizen]
    bump_message = "Bump version to $new_version"
    name = "cz_conventional_commits"
    style = [
        ["qmark", "fg:#ff9d00 bold"],
        ["question", "bold"],
        ["answer", "fg:#ff9d00 bold"],
        ["pointer", "fg:#ff9d00 bold"],
        ["highlighted", "fg:#ff9d00 bold"],
        ["selected", "fg:#cc5454"],
        ["separator", "fg:#cc5454"],
        ["instruction", ""],
        ["text", ""],
        ["disabled", "fg:#858585 italic"],
    ]
    tag_format = "$version"
    version = "2022.36.1a3"
    version_files = [
        "boardfarm3_docsis/__init__.py:version",
        "pyproject.toml:version",
        "pyproject.toml:current",
    ]

[tool.isort]
    profile = "black"

[tool.mypy]
    disallow_untyped_defs  = true
    ignore_missing_imports = true
    no_strict_optional     = true
    pretty                 = true
    show_error_codes       = true
    warn_redundant_casts   = true
    warn_unreachable       = true
    warn_unused_ignores    = true

[tool.tbump]
    [tool.tbump.version]
        current = "2022.36.1a3"

        # Example of a semver regexp.
        # Make sure this matches current_version before
        # using tbump
        regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

    [tool.tbump.git]
        message_template = "Bump to {new_version}"
        tag_template     = "{new_version}"

    # For each file to patch, there is a [[tool.tbump.file]] config
    # section containing the path of the file, relative to the
    # pyproject.toml location.
    [[tool.tbump.file]]
        src = "boardfarm3_docsis/__init__.py"

    [[tool.tbump.file]]
        src = "pyproject.toml"
